Footer design + quick adaptatioon section spacing + fix height card

--- a/css/modules/activities-cards.css
+++ b/css/modules/activities-cards.css
@@ -2,13 +2,15 @@
     display:flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    row-gap: 3rem;
 }
 
 .activities-cards .card {
     --paddingCard: 0;
     width: 22%;
+    height:440px;
 }
 
 .activities-cards .card-thumbnail {
-    
+    height: 85%;
 }
