--- a/css/modules/footer-app.css
+++ b/css/modules/footer-app.css
@@ -1,10 +1,13 @@
 .main-footer {
+    --section-radius:0;
     display: flex;
     justify-content: space-between;
+    margin-top:1.5rem;
 }
 
 .footer-nav {
     display: flex;
     flex-direction: column;
-    justify-content: center
-}
+    width: 33%;
+    row-gap: 1.15rem;
+} 
