--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,7 @@
     --title-section-line-height:1.3;
 
     --section-radius:15px;
+    --padding-common:1.15rem;
     --regTransition:all .25s ease-in-out;
 }
 
@@ -103,7 +104,7 @@ a {
 }
 
 .block-data {
-    padding:1.15rem;
+    padding:var(--padding-common);
     background:var(--main-bg-color);     
     border-radius: var(--section-radius);
 }
@@ -132,7 +133,7 @@ a {
 }
 
 #activities {
-    /* width:100%; */
+    padding:var(--padding-common);
 }
 
 
